--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ PLAID_PRODUCTS=
 PLAID_COUNTRY_CODES=
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
-DWOLLA_BASE_URL=
-DWOLLA_ENV=
+DWOLLA_KEY=wEyAoraWI82j6WmWunSZlhoRfs5RKJxev0nLEfLVAJBzqYedfS
+DWOLLA_SECRET=LiVmKY3K0L5eP45nLe4Y7styDswmQrH5gA9OBKSWr7IZsE9KHo
+DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
+DWOLLA_ENV=sandbox
