--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sentry/nextjs": "^8.25.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dwolla-v2": "^3.4.0",
     "lucide-react": "^0.400.0",
     "next": "^14.2.5",
     "node-appwrite": "^13.0.0",
